--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
               <div class="blog-card">
                 <div class="blog-image">
-                  <img src="C:\Users\marwa\Downloads\AZ-main\AZ-main\az.law.jpg" alt="" />
+                  <img src="az.law.jpg" alt="" />
                 </div>
 
                 <div class="blog-content">
@@ -201,7 +201,7 @@
             <div class="blog-wrap">
               <div class="blog-card">
                 <div class="blog-image">
-                  <img src="C:\Users\marwa\Downloads\AZ-main\AZ-main\az.law.jpg" alt="" />
+                  <img src="az.law.jpg" alt="" />
                 </div>
 
                 <div class="blog-content">
@@ -223,7 +223,7 @@
             <div class="blog-wrap">
               <div class="blog-card">
                 <div class="blog-image">
-                  <img src="C:\Users\marwa\Downloads\AZ-main\AZ-main\az.law.jpg" alt="" />
+                  <img src="az.law.jpg" alt="" />
                 </div>
 
                 <div class="blog-content">
