--- a/سجل/index.html
+++ b/سجل/index.html
@@ -37,7 +37,7 @@
 
                   
 
-                        <a href="C:\Users\marwa\Downloads\AZ-main\AZ-main\الصفوف.html" class="login__button">تسجيل دخول </a>
+                        <a href="https://az-education1.github.io/-AZ-sharia-law/" class="login__button">تسجيل دخول </a>
 
                         <div>
                             <span class="login__account">هل  تحتاج حساب؟</span>
@@ -76,7 +76,7 @@
                             <input type="password" placeholder="كلمه السر" class="login__input">
                         </div>
 
-                        <a href="C:\Users\marwa\Downloads\AZ-main\AZ-main\الصفوف.html" class="login__button">انشاء حساب </a>
+                        <a href="https://az-education1.github.io/-AZ-sharia-law/" class="login__button">انشاء حساب </a>
 
                         <div>
                             <span class="login__account">هل لديك حساب؟</span>
