--- a/سجل/index.html
+++ b/سجل/index.html
@@ -18,7 +18,7 @@
         <div class="login">
             <div class="login__content">
                 <div class="login__img">
-                    <img src="C:\Users\marwa\Downloads\AZ-main\AZ-main\AZ m.png" alt="">
+                    <img src="AZ m.png" alt="">
                 </div>
 
                 <div class="login__forms">
